--- a/index.html
+++ b/index.html
@@ -131,6 +131,96 @@
         </div>
     </div> 
 </section>
+<!-- shoesection -->
+<section id="shoes">
+ <div class="container shoe">
+     <h3>Shoes</h3>
+     <div class="card-deck">
+        <div class="card">
+          <img src="img/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-text">$999</h5>
+            <button class="btn btn-buy">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Reebok Pump</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-text">$799</h5>
+            <button class="btn btn-buy">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Reebok All Terrain</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-text">$699</h5>
+            <button class="btn btn-buy">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+ </div>
+</section>
+<!-- bagsection -->
+ <section id = "back-pack">
+  <div class="container backpack">
+   <h3>Backpack</h3>
+   <div class="card-deck">
+    <div class="card">
+      <img src="img/bag-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ison Backpack</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5>$999</h5>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-buy">Buy Now >></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="img/bag-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Biaowang Backpack </h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <h5>$2799</h5>
+      <div class="card-footer">
+        <button class="btn btn-buy">Buy Now >></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="img/bag-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Dxyizu WS54 Smart </h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <h5>$999</h5>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-buy">Buy Now >></button>
+      </div>
+    </div>
+  </div>
+  </div>
+ </section>
+ <section id="contact">
+     <div class="container d-flex justify-content-center align-items-center contact bg-orange">
+         <div>
+            <h3>LET'S STAY IN TOUCH
+            </h3>
+            <h6>Gets update on sales,special and more</h6>
+              <input  class="form-control mb-2 mt-1" type="text" placeholder="Enter Your Email">
+              <button class="btn btn-buy">Submit</button>
+        </div>
+         </div>    
+ </section>
+ <footer class="text-center">
+   <small>&copy; All Rights Reserved ..Panda Arefin</small>
+ </footer>
 
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
